syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.test.hello";

service Hello {
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}

// 请求信息
message HelloRequest {
    string name = 1;
}

// 相应信息
message HelloReply {
    string message = 1;
}